# chess

./: .gitignore  CMakeLists.txt  README.md  Schack_KevinGrundhall.md  schack_kevingrundhall.md
Bös/: Plan.md  lukewarm_iq.md
docs/: sources.md
include/: Board.h  Color.h  Game.h  InputHandler.h  Piece.h  Position.h  Renderer.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
include/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
src/: Board.cpp  Game.cpp  InputHandler.cpp  Piece.cpp  Renderer.cpp  main.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
